force-app/main/default/objects/ROSE_Media_Attachment__c/ROSE_Media_Attachment__c.object-meta.xml
<CustomObject>
    <label>Media Attachment</label>
    <pluralLabel>Media Attachments</pluralLabel>
    <nameField>
        <displayFormat>MA-{00000}</displayFormat>
        <label>Media Attachment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>