force-app/main/default/objects/ROSE_Media_Attachment__c/fields/Content_Version__c.field-meta.xml
<CustomField>
    <fullName>Content_Version__c</fullName>
    <label>Content Version</label>
    <referenceTo>ContentVersion</referenceTo>
    <relationshipLabel>Media Attachments</relationshipLabel>
    <relationshipName>Media_Attachments</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>