force-app/main/default/objects/ROSE_Media_Attachment__c/fields/GPS_Longitude__c.field-meta.xml
<CustomField>
    <fullName>GPS_Longitude__c</fullName>
    <label>GPS Longitude</label>
    <type>Number</type>
    <precision>15</precision>
    <scale>6</scale>
</CustomField>