force-app/main/default/objects/ROSE_Media_Attachment__c/fields/ROSE_Form_Response__c.field-meta.xml
<CustomField>
    <fullName>ROSE_Form_Response__c</fullName>
    <label>Form Response</label>
    <referenceTo>ROSE_Form_Response__c</referenceTo>
    <relationshipLabel>Media Attachments</relationshipLabel>
    <relationshipName>Media_Attachments</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>